# odoo

./: README.md  pyproject.toml
configs/: central_kitchen.conf
