[tool.poetry]
name = "odoo17"
version = "0.1.0"
description = ""
authors = ["wnz27 <wnz27@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
babel = "2.9.1"
chardet = "4.0.0"
cryptography = "3.4.8"
decorator = "4.4.2"
docutils = "0.17"
ebaysdk = "2.1.5"
freezegun = "1.1.0"
geoip2 = "2.9.0"
gevent = "21.8.0"
greenlet = "1.1.2"
idna = "2.10"
jinja2 = "3.0.3"
libsass = "0.20.1"
lxml = "4.8.0"
markupsafe = "2.0.1"
num2words = "0.5.10"
ofxparse = "0.21"
passlib = "1.7.4"
pillow = "9.0.1"
polib = "1.1.1"
psutil = "5.9.0"
psycopg2 = "2.9.2"
pydot = "1.4.2"
pyopenssl = "21.0.0"
pypdf2 = "1.26.0"
pyserial = "3.5"
python-dateutil = "2.8.1"
python-ldap = "3.4.0"
python-stdnum = "1.17"
pytz = "^2024.1"
pyusb = "1.2.1"
qrcode = "7.3.1"
reportlab = "3.6.8"
requests = "2.25.1"
rjsmin = "1.1.0"
urllib3 = "1.26.5"
vobject = "0.9.6.1"
werkzeug = "2.0.2"
xlrd = "1.2.0"
xlsxwriter = "3.0.2"
xlwt = "1.3.0"
zeep = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
